<resources>
    <string name="app_name">WorldVirus\nWatch</string>
    <string name="notice_app_exit">Press again to exit.</string>

    <string name="notice_need_permission">If you do not grant permission, some functions are not be able to used.</string>
    <string name="notice_empty_data">No Data</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="error_data_loading">Data loading error</string>
    <string name="error_google_map">Google Maps not available.</string>
    <string name="key_google_map">AIzaSyAUTgR2I8bbVX_8XHcoMRxkLlqx4Uz6xTs</string>
    <string name="notification_channel_id">1</string>
    <string name="fcm_title">FCM Message</string>

    <string name="page_intro">Intro</string>
    <string name="page_data">Data</string>
    <string name="page_graph">Graph</string>
    <string name="page_map">Map</string>
    <string name="page_news">News</string>
    <string name="page_notices">Notices</string>
    <string name="popup_webview">Webview</string>
    <string name="page_setup">Setup</string>

    <string name="page_setup_notice">Notice</string>
    <string name="page_setup_pc">PC Version</string>
    <string name="page_setup_push">Push</string>

    <string name="cp_header_title">World Virus Watch</string>

    <string name="cp_tab_title">COVID-19</string>
    <string name="cp_tab_data">DATA</string>
    <string name="cp_tab_news">NEWS</string>

    <string name="cp_data_box_title">Confirmed</string>
    <string name="cp_data_box_deaths">Deaths</string>
    <string name="cp_data_box_recovered">Recovered</string>\
    <string name="cp_map_title">Map</string>
    <string name="copy_right">Copyright © 2020 World Virus Watch all rights reserved.\nworldviruswatch@ironraft.com</string>
</resources>
