<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/color_gray_deep">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_header"
        android:layout_marginStart="@dimen/margin_regular"
        android:layout_marginEnd="@dimen/margin_regular"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:background="@drawable/effect_circle_ripple"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/ic_arrow_left"
            android:tint="@color/color_white"
            android:scaleType="fitCenter"
            />
        <TextView
            android:id="@+id/textTitle"
            style="@style/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cp_tab_title"
            android:textColor="@color/color_white"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_gravity="start|center_vertical"
            />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_header">

        <LinearLayout
            android:id="@+id/contentBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_regular">

            <TextView
                android:id="@+id/textConfirmed"
                style="@style/font_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/cp_data_box_title"
                android:textColor="@color/color_white"
                android:layout_marginTop="@dimen/margin_medium"
                />
            <com.ironleft.corona.component.GraphBox
                android:id="@+id/graphConfirmedBox"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="@dimen/margin_thin"
                />

            <TextView
                android:id="@+id/textDeaths"
                style="@style/font_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/cp_data_box_deaths"
                android:textColor="@color/color_red"
                android:layout_marginTop="@dimen/margin_medium"
                />
            <com.ironleft.corona.component.GraphBox
                android:id="@+id/graphDeathsBox"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="@dimen/margin_thin"
                />


            <TextView
                android:id="@+id/textRecovered"
                style="@style/font_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/cp_data_box_recovered"
                android:textColor="@color/color_green"
                android:layout_marginTop="@dimen/margin_medium"
                />
            <com.ironleft.corona.component.GraphBox
                android:id="@+id/graphRecoveredBox"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="@dimen/margin_thin"
                />


            <com.ironleft.corona.component.CountryBox
                android:id="@+id/countryBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_regular"
                />


        </LinearLayout>
    </ScrollView>



</FrameLayout>
